# DGCNN-GPGPU

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/: FindOpenCL.cmake  FindcuBLAS.cmake
doc/: summary_ops.md
doc/ClassificationOps/: Conv2d.txt  Variance.txt
inc/: ModelArch01.h  ModelArchTop.h  ModelArchTop01.h  ModelArchTop02.h  ModelArchTop03.h  ModelArchTop04.h  ModelArchTop05.h  PlatformImplementation.h  PlatformSelector.h  TensorF.h  TensorI.h  WeightsLoader.h  WorkScheduler.h  build_config.h.in
inc/cpu_imp/: CpuImplementation.h  model01.h
inc/cuda_imp/: CudaImplementation.h  CudaMemHelper.h  CudaTensorF.h  CudaTensorI.h  CudaTestAll.h  Kernels.h  LA_CUDA.h  Tensor.h  TensorF_OLD.h  TimingGPU.h
inc/ocl_imp/: OclImplementation.h  OclTensorF.h  OclTensorI.h  OclTestAll.h  model01.h  oclTestAll.h
kernels/cuda/: concat.cu  conv2d_cudnn.cu  conv2d_mlp.cu  gather.cu  mamul.cu  mat_add_sub_elementwisemul.cu  reduce_max.cu  reduce_mean.cu  reduce_sum.cu  reduce_sum_3d.cu  reduce_sum_4d.cu  reduce_variance.cu  relu.cu  split.cu  sqrt.cu  square.cu  tile.cu  topk.cu  transpose.cu
kernels/ocl/: concat.cl.cc  conv2d_mlp.cl.cc  gather.cl.cc  kernel_test.cl  kernel_test.cl.cc  mamul.cl.cc  mat_add_sub_elementwisemul.cl.cc  matmul.cl.cc  reduce_max.cl.cc  reduce_mean.cl.cc  reduce_sum_3d.cl.cc  reduce_sum_4d.cl.cc  reduce_sum_4d_try05.cl.cc  reduce_variance.cl.cc  relu.cl.cc  split_float.cl.cc  split_integer.cl.cc  sqrt.cl.cc  square.cl.cc  tile.cl.cc  topk.cl.cc  transpose.cl.cc
src/: CMakeLists.txt  ClassifierMultiPlatform.cpp  ModelArch01.cpp  ModelArchTop.cpp  ModelArchTop01.cpp  ModelArchTop02.cpp  ModelArchTop03.cpp  ModelArchTop04.cpp  ModelArchTop05.cpp  PlatformSelector.cpp  TensorF.cpp  TensorI.cpp  WeightsLoader.cpp  tensorF_test.cpp
src/cpu_imp/: CMakeLists.txt  CpuImplementation.cpp  main.cpp  model01.cpp  readme.md
src/cuda_imp/: CMakeLists.txt  CudaImplementation.cpp  CudaMemHelper.cpp  CudaTensorF.cpp  CudaTensorI.cpp  CudaTestAll.cpp  LA_CUDA.cpp  LA_CUDA_Test.cpp  Tensor.cpp  TimingGPU.cpp  cublas_test.cpp  readme.md
src/cuda_imp/cublas_tests/: LA_CUDA.cpp  LA_CUDA_Test.cpp  Tensor.cpp  batched_sgemm_ex.cpp  batched_sgemm_ex2.cpp
src/cuda_imp/kernel_tests/: CMakeLists.txt  cutest_concat_2d_4d.cpp  cutest_conv2d_cudnn.cpp  cutest_conv2d_mlp.cpp  cutest_mat_ops.cpp  cutest_matmul.cpp  cutest_reduce_max_3d_4d.cpp  cutest_reduce_mean_2d_4d.cpp  cutest_reduce_sum_allaxes.cpp  cutest_reduce_sum_oneaxis.cpp  cutest_reduce_sum_oneaxis_4d.cpp  cutest_reduce_variance_2d_4d.cpp  cutest_tile.cpp  cutest_tile_3d.cpp  cutest_topk.cpp  cutest_transpose.cpp
src/ocl_imp/: CMakeLists.txt  OclImplementation.cpp  OclTensorF.cpp  OclTensorI.cpp  OclTestAll.cpp  ReadMe.md  kernel_launcher.cpp  model01.cpp  oclTestAll.cpp  test.cpp
submodules/: CMakeLists.txt
